--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,10 @@ opencv-python==4.9.0.80
 opt-einsum==3.3.0
 packaging==24.0
 pillow==10.2.0
-protobuf==3.20.3
+protobuf==4.25.3
 pyasn1==0.5.1
 pycparser==2.21
-pydantic==2.6.3
+pydantic==2.6.4
 pydantic_core==2.16.3
 pyparsing==3.1.2
 pytailwindcss==0.2.0
@@ -50,8 +50,9 @@ six==1.16.0
 sniffio==1.3.1
 sounddevice==0.4.6
 SQLAlchemy==2.0.28
-starlette==0.36.3
+starlette==0.37.2
 typing_extensions==4.10.0
-uvicorn==0.27.1
+uvicorn==0.28.0
 watchfiles==0.21.0
 websockets==12.0
+passlib~=1.7.4
