--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ BASE_URL="http://localhost:8000"
 
 ACCESS_TOKEN_SECRET="YOUR_SECRET_KEY"
 REFRESH_TOKEN_SECRET="YOUR_SECRET_KEY"
-ACCESS_TOKEN_EXPIRATION="1" # in hours
-REFRESH_TOKEN_EXPIRATION="1" # in days
+ACCESS_TOKEN_EXPIRATION="1"
+REFRESH_TOKEN_EXPIRATION="1"
 
 DB_HOST="localhost"
 DB_PORT="5432"
