--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,14 +2,13 @@ FROM python:3.10
 
 RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
-COPY . .
+COPY ./app /app/app
+COPY requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-ENV UVICORN_HOST=0.0.0.0 UVICORN_PORT=8000
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--workers", "4"]
