--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,9 +2,11 @@ FROM python:3.10
 
 RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
 
+COPY . .
+
 WORKDIR /app
 
-COPY . .
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
