--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -17,7 +17,7 @@ server {
 server {
     listen 80;
     # Replace with your own domain
-    server_name api.sirshak.tech;
+    server_name _ api.sirshak.tech;
 
     location / {
         proxy_pass http://backend:8000;
