--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,11 +2,10 @@ FROM python:3.10
 
 RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
 
-COPY . .
-
 WORKDIR /app
 
-COPY requirements.txt .
+COPY ./app /app/app
+COPY requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
