--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -16,8 +16,7 @@ server {
 # Backend server
 server {
     listen 80;
-    # Replace with your own domain
-    server_name _ api.sirshak.tech;
+    server_name api.sirshak.tech _;
 
     location / {
         proxy_pass http://backend:8000;
@@ -25,5 +24,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
