--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -1,31 +1,33 @@
-# nginx/init.conf
+http {
+    # Frontend server
+    server {
+        listen 80;
+        # Replace with your own domain
+        server_name sirshak.tech www.sirshak.tech;
 
-# Frontend server
-server {
-    listen 80;
-    # Replace with your own domain
-    server_name sirshak.tech www.sirshak.tech;
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+    }
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+    # Backend server
+    server {
+        listen 80;
+        server_name api.sirshak.tech _;
+
+        location / {
+            proxy_pass http://backend:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 }
 
-# Backend server
-server {
-    listen 80;
-    server_name api.sirshak.tech _;
 
-    location / {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-}
