--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -1,21 +1,21 @@
 http {
-    # Frontend server
-    server {
-        listen 80;
-        # Replace with your own domain
-        server_name sirshak.tech www.sirshak.tech;
+    # # Frontend server
+    # server {
+    #     listen 80;
+    #     # Replace with your own domain
+    #     server_name sirshak.tech www.sirshak.tech;
 
-        location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html;
-        }
-    }
+    #     location / {
+    #         root /usr/share/nginx/html;
+    #         index index.html index.htm;
+    #         try_files $uri $uri/ /index.html;
+    #     }
+    # }
 
     # Backend server
     server {
         listen 80;
-        server_name api.sirshak.tech _;
+        server_name _;
 
         location / {
             proxy_pass http://backend:8000;
