feat: working demo

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,30 +1,8 @@
 http {
-    # For (Frontend)
     server {
         listen 443 ssl;
         # Replace with your own domain
-        server_name sirshak.tech www.sirshak.tech;
-
-        ssl_certificate /etc/letsencrypt/live/sirshak.tech/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/sirshak.tech/privkey.pem;
-
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-        }
-
-        # Redirect HTTP to HTTPS
-        listen 80;
-        if ($scheme = http) {
-            return 301 https://$server_name$request_uri;
-        }
-    }
-
-    # For (Backend)
-    server {
-        listen 443 ssl;
-        # Replace with your own domain
-        server_name api.sirshak.tech;
+        server_name sirshak.tech;
 
         ssl_certificate /etc/letsencrypt/live/api.sirshak.tech/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/api.sirshak.tech/privkey.pem;
