feat: changed the nginx ssl file

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,15 +1,19 @@
 http {
     server {
+        listen 80;
+        server_name sirshak.tech www.sirshak.tech;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         listen 443 ssl;
-        # Replace with your own domain
-        server_name sirshak.tech;
+        server_name sirshak.tech www.sirshak.tech;
 
         ssl_certificate /etc/letsencrypt/live/sirshak.tech/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/sirshak.tech/privkey.pem;
 
         location / {
-            proxy_pass http://backend:8000;
-            proxy_redirect off;
+            proxy_pass http://app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,15 +21,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-
-        # Redirect HTTP to HTTPS
-        listen 80;
-        if ($scheme = http) {
-            return 301 https://$server_name$request_uri;
         }
     }
 }
