feat: added the certbot dir to the mounted volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      # The init.conf will be changed with ssl. conf once we have ssl
+      # The init.conf will be changed with ssl.conf once we have ssl
       - ./nginx/init.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - app
 
