feat: changed the init file

--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -3,6 +3,13 @@ http {
         listen 80;
         server_name _;
 
+        # Serve Let's Encrypt challenges
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot; # Ensure this path matches the Certbot's mounted volume
+            allow all;
+        }
+
+        # Proxy other requests to your FastAPI app
         location / {
             proxy_pass http://app:8000;
             proxy_set_header Host $host;
