feat: added certbot

--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -5,7 +5,7 @@ http {
 
         # Serve Let's Encrypt challenges
         location /.well-known/acme-challenge/ {
-            root /var/www/certbot; # Ensure this path matches the Certbot's mounted volume
+            root /var/www/certbot;
             allow all;
         }
 
