--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       # The init.conf will be changed with ssl.conf once we have ssl
       - ./nginx/init.conf:/etc/nginx/nginx.conf
       - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - app
 
