feat: changed the domain fields

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,16 +1,16 @@
 http {
     server {
         listen 80;
-        server_name sirshak.tech www.sirshak.tech;
+        server_name suhaayoo.store www.suhaayoo.store;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name sirshak.tech www.sirshak.tech;
+        server_name suhaayoo.store www.suhaayoo.store;
 
-        ssl_certificate /etc/letsencrypt/live/sirshak.tech/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/sirshak.tech/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/suhaayoo.store/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/suhaayoo.store/privkey.pem;
 
         location / {
             proxy_pass http://app:8000;
