--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -13,12 +13,14 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/suhaayoo.store/privkey.pem;
 
         location / {
-            proxy_pass http://app:8000;
+            proxy_pass https://app:8000;
             proxy_set_header Host $host;
+            proxy_http_version 1.1;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_http_version 1.1;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
