--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -13,7 +13,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/suhaayoo.store/privkey.pem;
 
         location / {
-            proxy_pass https://app:8000;
+            proxy_pass http://app:8000;
             proxy_set_header Host $host;
             proxy_http_version 1.1;
             proxy_set_header X-Real-IP $remote_addr;
