--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -14,6 +14,7 @@ http {
 
         location / {
             proxy_pass http://app:8000;
+            proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
