feat: I hate this: So putting a '/' in the PUT request is causing the nginx to redirect the traffic to HTTP bruh WHAT. I spent 1 hours in this BS.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,4 +11,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--workers", "4", "--proxy-headers"]
+CMD ["gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--workers", "4"]
