--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,4 +1,7 @@
 http {
+    access_log /dev/null;
+    error_log /dev/null;
+    
     server {
         listen 80;
         server_name suhaayoo.store www.suhaayoo.store;
