feat: basic changes

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,19 +1,19 @@
 http {
-    access_log /dev/null;
-    error_log /dev/null;
+    # access_log /dev/null;
+    # error_log /dev/null;
     
     server {
         listen 80;
-        server_name suhaayoo.store www.suhaayoo.store;
+        server_name sirshak.tech;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name suhaayoo.store www.suhaayoo.store;
+        server_name sirshak.tech;
 
-        ssl_certificate /etc/letsencrypt/live/suhaayoo.store/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/suhaayoo.store/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/sirshak.tech/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sirshak.tech/privkey.pem;
 
         location / {
             proxy_pass http://app:8000;
